--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Thinkful",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "play": "clake"
   },
   "author": "Christine",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "clake": "^1.0.1",
+    "debug": "^4.3.1"
+  }
 }
